add padding for mobile

--- a/src/pages/disclaimer.mdx
+++ b/src/pages/disclaimer.mdx
@@ -3,7 +3,7 @@ import styled from 'styled-components'
 
 <BG />
 
-<div style={{maxWidth: '650px', margin: '0px auto 10rem auto'}}>
+<div style={{maxWidth: '650px', margin: '0px auto 10rem auto', padding: '0 1rem'}}>
 <Title>Uniswap protocol disclaimer
 </Title>
 
