--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -1,7 +1,7 @@
 import BG from '../components/bg'
 import styled from 'styled-components'
 
-<BG /><div style={{maxWidth: '650px', margin: '0px auto 10rem auto'}}>
+<BG /><div style={{maxWidth: '650px', margin: '0px auto 10rem auto', padding: '0 1rem'}}>
 <Title>Uniswap protocol terms of service</Title>
 
 Modified: April 23, 2021
