--- a/src/pages/trademarks.mdx
+++ b/src/pages/trademarks.mdx
@@ -3,7 +3,7 @@ import styled from 'styled-components'
 
 <BG />
 
-<div style={{maxWidth: '650px', margin: '0px auto 10rem auto'}}>
+<div style={{maxWidth: '650px', margin: '0px auto 10rem auto', padding: '0 1rem'}}>
 <Title>Uniswap Labs Trademark Guidelines</Title>
 
 Uniswap Labs distributed the open source Uniswap protocol (versions 1, 2, and 3) and distributes other software. While our code is in part available to download, review, and improve under open-source and source-available software licenses, none of our licenses include a license to use our trademarks. Proper use of our trademarks is essential to inform users whether or not Uniswap Labs stands behind a product or service. When using Uniswap Labs&#39; trademarks, you must comply with these Uniswap Labs Trademark Guidelines. Just like other projects that develop open source software, we must enforce our trademark rights to protect our users.
