--- a/src/pages/bug-bounty.mdx
+++ b/src/pages/bug-bounty.mdx
@@ -5,7 +5,7 @@ import styled from 'styled-components'
 
 <BG />
 
-<div style={{maxWidth: '650px', margin: '0px auto'}}>
+<div style={{maxWidth: '650px', margin: '0px auto', padding: '0 1rem'}}>
 <Title>Uniswap V3 Bug Bounty</Title>
 
 <center>
