Typos fix to ToS 10.25 edit

--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -101,16 +101,16 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
     Any claim or controversy arising out of or relating to the Interface, this Agreement, or any other acts or omissions for which you may contend that we are liable, including (but not limited to) any claim or controversy as to arbitrability (&quot;Dispute&quot;), shall be finally and exclusively settled by arbitration under the JAMS Optional Expedited Arbitration Procedures. You understand that you are required to resolve all Disputes by binding arbitration. The arbitration shall be held on a confidential basis before a single arbitrator, who shall be selected pursuant to JAMS rules. The arbitration will be held in New York, New York, unless you and we both agree to hold it elsewhere. Unless we agree otherwise, the arbitrator may not consolidate your claims with those of any other party. Any judgment on the award rendered by the arbitrator may be entered in any court of competent jurisdiction.
 
-17. Class Action and Jury Trial Waiver
+18. Class Action and Jury Trial Waiver
 
     You must bring any and all Disputes against us in your individual capacity and not as a plaintiff in or member of any purported class action, collective action, private attorney general action, or other representative proceeding. This provision applies to class arbitration. You and we both agree to waive the right to demand a trial by jury.
 
-18. Governing Law
+19. Governing Law
 
     You agree that the laws of the State of New York, without regard to principles of conflict of laws, govern this Agreement and any Dispute between you and us. You further agree that the Interface shall be deemed to be based solely in the State of New York, and that although the Interface may be available in other jurisdictions, its availability does not give rise to general or specific personal jurisdiction in any forum outside the State of New York. Any arbitration conducted pursuant to this Agreement shall be governed by the Federal Arbitration Act. You agree that New York, New York is the proper forum for any appeals of an arbitration award or for court proceedings in the event that this Agreement&#39;s binding arbitration clause is found to be unenforceable.
 
-19. Entire Agreement. These terms constitute the entire agreement between you and us with respect to the subject matter hereof. This Agreement supersedes any and all prior or contemporaneous written and oral agreements, communications and other understandings (if any) relating to the subject matter of the terms.
-
-
+20. Entire Agreement 
+    
+    These terms constitute the entire agreement between you and us with respect to the subject matter hereof. This Agreement supersedes any and all prior or contemporaneous written and oral agreements, communications and other understandings (if any) relating to the subject matter of the terms.
 
 </div>
