--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -8,7 +8,7 @@ Last modified: October 25, 2021
 
 **Terms of Service**
 
-Welcome to https://app.uniswap.org, a website-hosted user interface (the &quot;Interface&quot; or &quot;App&quot;) provided by Uniswap Labs (&quot;we&quot;, &quot;our&quot;, or &quot;us&quot;). The Interface provides access to a decentralized protocol on the Ethereum blockchain that allows users to trade certain digital assets (&quot;the Uniswap protocol&quot; or the &quot;Protocol&quot;).
+Welcome to https://app.uniswap.org, a website-hosted user interface (the &quot;Interface&quot; or &quot;App&quot;) provided by Uniswap Labs (&quot;we&quot;, &quot;our&quot;, or &quot;us&quot;). The Interface provides access to a decentralized protocol on the Ethereum blockchain that allows users to trade certain digital assets (&quot;the Uniswap protocol&quot; or the &quot;Protocol&quot;). The Interface is one, but not the exclusive, means of accessing the Protocol. 
 
 This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms and conditions by which you may access and use the Interface. You must read this Agreement carefully. By accessing or using the Interface, you signify that you have read, understand, and agree to be bound by this Agreement in its entirety. If you do not agree, you are not authorized to access or use the Interface and should not use the Interface.
 
