--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -53,7 +53,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
 7. Not Registered with the SEC or Any Other Agency
 
-   We are not registered with the U.S. Securities and Exchange Commission as a national securities exchange or in any other capacity. You understand and acknowledge that we do not we do not broker trading orders on your behalf nor do we collect or earn fees from your trades on the Protocol. We also do not facilitate the execution or settlement of your trades, which occur entirely on the public distributed Ethereum blockchain. 
+   We are not registered with the U.S. Securities and Exchange Commission as a national securities exchange or in any other capacity. You understand and acknowledge that we do not broker trading orders on your behalf nor do we collect or earn fees from your trades on the Protocol. We also do not facilitate the execution or settlement of your trades, which occur entirely on the public distributed Ethereum blockchain. 
     
 8. Non-Solicitation; No Investment Advice
 
