--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -57,7 +57,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
     
 8. Non-Solicitation; No Investment Advice
 
-    You agree and understand that all trades you submit through the Interface are considered unsolicited, which means that you have not received any investment advice from us in connection with any trades, including those you place via our routing API, and that we do not conduct a suitability review of any trades you submit. 
+    You agree and understand that all trades you submit through the Interface are considered unsolicited, which means that you have not received any investment advice from us in connection with any trades, including those you place via our Auto Router API, and that we do not conduct a suitability review of any trades you submit. 
     
     All information provided by the Interface is for informational purposes only and should not be construed as investment advice. You should not take, or refrain from taking, any action based on any information contained in the Interface. We do not make any investment recommendations to you or opine on the merits of any investment transaction or opportunity. You alone are responsible for determining whether any investment, investment strategy or related transaction is appropriate for you based on your personal investment objectives, financial circumstances, and risk tolerance.
     
